tests/ui/pattern/slice-pattern-refutable.stderr
error[E0282]: type annotations needed
  --> $DIR/slice-pattern-refutable.rs:14:9
   |
LL |     let [a, b, c] = Zeroes.into() else {
   |         ^^^^^^^^^
   |
help: consider giving this pattern a type
   |
LL |     let [a, b, c]: /* Type */ = Zeroes.into() else {
   |                  ++++++++++++

error[E0282]: type annotations needed
  --> $DIR/slice-pattern-refutable.rs:21:12
   |
LL |     if let [a, b, c] = Zeroes.into() {
   |            ^^^^^^^^^ cannot infer type

error[E0282]: type annotations needed
  --> $DIR/slice-pattern-refutable.rs:28:12
   |
LL |     if let [a, b, c] = Zeroes.into() {
   |            ^^^^^^^^^ cannot infer type

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0282`.
